--- a/Views/UsuariosLogIn/Inicio.cshtml
+++ b/Views/UsuariosLogIn/Inicio.cshtml
@@ -17,7 +17,7 @@
     <div style="background-color:white; position:relative; height:100vh;">
         <div>
             @ViewData["xValCerYFie"]
-            <input type="submit" value="Ingresar" class="btn btn-primary my-4 " style="width:100px; font-size:9pt; margin-bottom:10px;" />
+            <input type="submit" value="Ingresar123" class="btn btn-primary my-4 " style="width:100px; font-size:9pt; margin-bottom:10px;" />
         </div>
     </div>
 
